--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,6 +1,10 @@
 .page-header {
     @apply flex items-center h-32 bg-primary-500 p-6 shadow-highlighter;
     &__logo {
-        @apply max-w-7xl mx-auto w-full;
+        @apply max-w-7xl mx-auto w-full h-full;
+
+        img {
+            @apply h-full;
+        }
     }
 }
