--- a/src/components/member-tooltip.css
+++ b/src/components/member-tooltip.css
@@ -14,14 +14,14 @@
     }
 
     &__detail-row {
-        @apply grid grid-cols-2;
+        @apply grid grid-cols-3;
 
         & > div:first-child {
             @apply font-bold;
         }
 
         & > div:last-child {
-            @apply text-right;
+            @apply text-right col-span-2;
         }
     }
 
